--- a/packages/esm-patient-chart-app/translations/en.json
+++ b/packages/esm-patient-chart-app/translations/en.json
@@ -71,7 +71,6 @@
   "fieldRequired": "This field is required",
   "filterByEncounterType": "Filter by encounter type",
   "form": "Form name",
-  "goToThisEncounter": "Go to this encounter",
   "indication": "Indication",
   "invalidTimeFormat": "Invalid time format",
   "invalidVisitStartDate": "Start date needs to be on or before {{firstEncounterDatetime}}",
@@ -154,6 +153,7 @@
   "updateError": "Error updating upcoming appointment",
   "updateVisit": "Update visit",
   "updatingVisit": "Updating visit",
+  "viewThisEncounter": "View this encounter",
   "visit": "Visit",
   "visitAttributes": "Visit Attributes",
   "visitCancelled": "Visit cancelled",
